Fix styling for footer tag so it sits right at the bottom of the page and easily readable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,13 +21,16 @@ body{
   background-repeat: no-repeat;
   font-family: 'Exo 2', sans-serif;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
 }
 header{
   margin-bottom: 105px;
 }
 footer{
-  margin-top: 125px;
+  padding: 10px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   background-color: black;
   color: white;
   text-align: center;
